Fix post date center alignment

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -23,7 +23,7 @@
   &-date {
     color: $default-tint;
     font-size: 0.85rem;
-    text-align: center;
+    text-align: center !important;
     margin: -0.5rem 0 1rem;
   }
 
